src/dremel/compiler/parser/impl/BqlParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g 2011-04-13 22:35:40
package dremel.compiler.parser.impl;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

/**
 * Copyright 2010, BigDataCraft.com
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 * http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
public class BqlParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "N_SELECT_STATEMENT", "N_FROM", "N_SELECT", "N_WHERE", "N_GROUPBY", "N_ORDERBY", "N_LIMIT", "N_ID", "N_CREATE_COLUMN", "N_ALIAS", "N_WITHIN", "N_TABLE", "N_WITHIN_RECORD", "N_ASC", "N_DESC", "N_TABLE_NAME", "N_NAME", "N_IN", "N_CALL", "N_OP", "N_LOGICAL_OR", "N_LOGICAL_AND", "N_BITWISE_OR", "N_BITWISE_XOR", "N_BITWISE_AND", "N_EQUAL", "N_NOT_EQUAL", "N_LESS_THAN", "N_LESS_THAN_OR_EQUAL", "N_GREATER_THAN", "N_LOGICAL_NOT", "N_BITWISE_NOT", "N_CONTAINS", "N_REMAINDER", "N_GREATER_THAN_OR_EQUAL", "N_BITWISE_RIGHT_SHIFT", "N_DIVIDE", "N_MULTIPLY", "N_SUBSTRUCT", "N_ADD", "N_BITWISE_LEFT_SHIFT", "N_IN_PARAMS", "N_CALL_PARAMS", "N_INT", "N_FLOAT", "N_STRING", "N_EXPRESSION", "SEMICOLON", "SELECT", "COMMA", "AS", "WITHIN", "RECORD", "FROM", "LPAREN", "RPAREN", "WHERE", "GROUPBY", "ORDERBY", "ASC", "DESC", "LIMIT", "INT", "DOT", "ID", "STAR", "FLOAT", "STRING", "LOGICAL_OR", "LOGICAL_AND", "BITWISE_OR", "BITWISE_XOR", "BITWISE_AND", "EQUAL", "NOT_EQUAL", "LESS_THAN", "LESS_THAN_OR_EQUAL", "GREATER_THAN", "GREATER_THAN_OR_EQUAL", "BITWISE_LEFT_SHIFT", "BITWISE_RIGHT_SHIFT", "ADD", "SUBSTRUCT", "REMAINDER", "CONTAINS", "BITWISE_NOT", "LOGICAL_NOT", "IN", "SLASH", "DIV", "S", "E", "L", "C", "T", "W", "I", "H", "N", "R", "O", "D", "A", "F", "M", "G", "U", "P", "WS", "B", "Y", "COLON", "LSQUARE", "RSQUARE", "LCURLY", "RCURLY", "F_ID1", "F_ID2", "F_EXPONENT", "F_HEX_DIGIT", "COMMENT", "J", "K", "Q", "V", "X", "Z"
    };
    public static final int STAR=69;
    public static final int LSQUARE=116;
    public static final int N_CALL=22;
    public static final int N_LIMIT=10;
    public static final int CONTAINS=88;
    public static final int N_DESC=18;
    public static final int BITWISE_LEFT_SHIFT=83;
    public static final int N_LOGICAL_NOT=34;
    public static final int N_CREATE_COLUMN=12;
    public static final int EOF=-1;
    public static final int N_NOT_EQUAL=30;
    public static final int LOGICAL_AND=73;
    public static final int N_GROUPBY=8;
    public static final int RPAREN=59;
    public static final int N_EXPRESSION=50;
    public static final int N_ADD=43;
    public static final int N_BITWISE_NOT=35;
    public static final int BITWISE_XOR=75;
    public static final int NOT_EQUAL=78;
    public static final int N_MULTIPLY=41;
    public static final int N_ID=11;
    public static final int N_IN=21;
    public static final int COMMENT=124;
    public static final int SELECT=52;
    public static final int N_BITWISE_XOR=27;
    public static final int GROUPBY=61;
    public static final int N_SUBSTRUCT=42;
    public static final int N_INT=47;
    public static final int D=105;
    public static final int E=95;
    public static final int F=107;
    public static final int G=109;
    public static final int N_WHERE=7;
    public static final int RECORD=56;
    public static final int N_LESS_THAN=31;
    public static final int A=106;
    public static final int B=113;
    public static final int C=97;
    public static final int ASC=63;
    public static final int L=96;
    public static final int M=108;
    public static final int N=102;
    public static final int O=104;
    public static final int H=101;
    public static final int I=100;
    public static final int J=125;
    public static final int K=126;
    public static final int U=110;
    public static final int T=98;
    public static final int W=99;
    public static final int V=128;
    public static final int LCURLY=118;
    public static final int Q=127;
    public static final int N_CALL_PARAMS=46;
    public static final int SEMICOLON=51;
    public static final int INT=66;
    public static final int F_ID2=121;
    public static final int P=111;
    public static final int F_ID1=120;
    public static final int S=94;
    public static final int R=103;
    public static final int Y=114;
    public static final int X=129;
    public static final int Z=130;
    public static final int F_HEX_DIGIT=123;
    public static final int WS=112;
    public static final int REMAINDER=87;
    public static final int N_STRING=49;
    public static final int LESS_THAN=79;
    public static final int WITHIN=55;
    public static final int N_WITHIN=14;
    public static final int N_TABLE=15;
    public static final int FROM=57;
    public static final int N_LESS_THAN_OR_EQUAL=32;
    public static final int N_BITWISE_AND=28;
    public static final int N_CONTAINS=36;
    public static final int WHERE=60;
    public static final int BITWISE_AND=76;
    public static final int BITWISE_NOT=89;
    public static final int LIMIT=65;
    public static final int N_BITWISE_RIGHT_SHIFT=39;
    public static final int BITWISE_OR=74;
    public static final int LOGICAL_NOT=90;
    public static final int FLOAT=70;
    public static final int ORDERBY=62;
    public static final int N_DIVIDE=40;
    public static final int F_EXPONENT=122;
    public static final int ID=68;
    public static final int N_LOGICAL_AND=25;
    public static final int LPAREN=58;
    public static final int N_BITWISE_OR=26;
    public static final int N_SELECT=6;
    public static final int AS=54;
    public static final int N_ORDERBY=9;
    public static final int SLASH=92;
    public static final int IN=91;
    public static final int N_TABLE_NAME=19;
    public static final int COMMA=53;
    public static final int EQUAL=77;
    public static final int N_NAME=20;
    public static final int LOGICAL_OR=72;
    public static final int DOT=67;
    public static final int N_FROM=5;
    public static final int N_SELECT_STATEMENT=4;
    public static final int ADD=85;
    public static final int N_REMAINDER=37;
    public static final int LESS_THAN_OR_EQUAL=80;
    public static final int N_EQUAL=29;
    public static final int SUBSTRUCT=86;
    public static final int N_WITHIN_RECORD=16;
    public static final int GREATER_THAN=81;
    public static final int N_GREATER_THAN_OR_EQUAL=38;
    public static final int N_ALIAS=13;
    public static final int N_IN_PARAMS=45;
    public static final int N_LOGICAL_OR=24;
    public static final int N_FLOAT=48;
    public static final int RSQUARE=117;
    public static final int N_BITWISE_LEFT_SHIFT=44;
    public static final int BITWISE_RIGHT_SHIFT=84;
    public static final int COLON=115;
    public static final int GREATER_THAN_OR_EQUAL=82;
    public static final int N_ASC=17;
    public static final int RCURLY=119;
    public static final int N_OP=23;
    public static final int DIV=93;
    public static final int DESC=64;
    public static final int N_GREATER_THAN=33;
    public static final int STRING=71;

    // delegates
    // delegators


        public BqlParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public BqlParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return BqlParser.tokenNames; }
    public String getGrammarFileName() { return "/home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g"; }


    public static class request_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "request"
    // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:34:1: request : selectStatement ( SEMICOLON )? EOF ;
    public final BqlParser.request_return request() throws RecognitionException {
        BqlParser.request_return retval = new BqlParser.request_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token SEMICOLON2=null;
        Token EOF3=null;
        BqlParser.selectStatement_return selectStatement1 = null;


        CommonTree SEMICOLON2_tree=null;
        CommonTree EOF3_tree=null;

        try {
            // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:34:13: ( selectStatement ( SEMICOLON )? EOF )
            // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:34:16: selectStatement ( SEMICOLON )? EOF
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_selectStatement_in_request180);
            selectStatement1=selectStatement();

            state._fsp--;

            adaptor.addChild(root_0, selectStatement1.getTree());
            // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:34:32: ( SEMICOLON )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==SEMICOLON) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:34:33: SEMICOLON
                    {
                    SEMICOLON2=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_request183); 

                    }
                    break;

            }

            EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_request188); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "request"

    public static class selectStatement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "selectStatement"
    // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:37:1: selectStatement : selectClause fromClause ( whereClause )? ( groupbyClause )? ( orderbyClause )? ( limitClause )? -> ^( N_SELECT_STATEMENT fromClause selectClause ( whereClause )? ( groupbyClause )? ( orderbyClause )? ( limitClause )? ) ;
    public final BqlParser.selectStatement_return selectStatement() throws RecognitionException {
        BqlParser.selectStatement_return retval = new BqlParser.selectStatement_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        BqlParser.selectClause_return selectClause4 = null;

        BqlParser.fromClause_return fromClause5 = null;

        BqlParser.whereClause_return whereClause6 = null;

        BqlParser.groupbyClause_return groupbyClause7 = null;

        BqlParser.orderbyClause_return orderbyClause8 = null;

        BqlParser.limitClause_return limitClause9 = null;


        RewriteRuleSubtreeStream stream_whereClause=new RewriteRuleSubtreeStream(adaptor,"rule whereClause");
        RewriteRuleSubtreeStream stream_orderbyClause=new RewriteRuleSubtreeStream(adaptor,"rule orderbyClause");
        RewriteRuleSubtreeStream stream_limitClause=new RewriteRuleSubtreeStream(adaptor,"rule limitClause");
        RewriteRuleSubtreeStream stream_selectClause=new RewriteRuleSubtreeStream(adaptor,"rule selectClause");
        RewriteRuleSubtreeStream stream_fromClause=new RewriteRuleSubtreeStream(adaptor,"rule fromClause");
        RewriteRuleSubtreeStream stream_groupbyClause=new RewriteRuleSubtreeStream(adaptor,"rule groupbyClause");
        try {
            // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:37:20: ( selectClause fromClause ( whereClause )? ( groupbyClause )? ( orderbyClause )? ( limitClause )? -> ^( N_SELECT_STATEMENT fromClause selectClause ( whereClause )? ( groupbyClause )? ( orderbyClause )? ( limitClause )? ) )
            // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:37:23: selectClause fromClause ( whereClause )? ( groupbyClause )? ( orderbyClause )? ( limitClause )?
            {
            pushFollow(FOLLOW_selectClause_in_selectStatement207);
            selectClause4=selectClause();

            state._fsp--;

            stream_selectClause.add(selectClause4.getTree());
            pushFollow(FOLLOW_fromClause_in_selectStatement209);
            fromClause5=fromClause();

            state._fsp--;

            stream_fromClause.add(fromClause5.getTree());
            // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:37:47: ( whereClause )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==WHERE) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:37:47: whereClause
                    {
                    pushFollow(FOLLOW_whereClause_in_selectStatement211);
                    whereClause6=whereClause();

                    state._fsp--;

                    stream_whereClause.add(whereClause6.getTree());

                    }
                    break;

            }

            // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:38:8: ( groupbyClause )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==GROUPBY) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:38:8: groupbyClause
                    {
                    pushFollow(FOLLOW_groupbyClause_in_selectStatement222);
                    groupbyClause7=groupbyClause();

                    state._fsp--;

                    stream_groupbyClause.add(groupbyClause7.getTree());

                    }
                    break;

            }

            // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:38:23: ( orderbyClause )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ORDERBY) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:38:23: orderbyClause
                    {
                    pushFollow(FOLLOW_orderbyClause_in_selectStatement225);
                    orderbyClause8=orderbyClause();

                    state._fsp--;

                    stream_orderbyClause.add(orderbyClause8.getTree());

                    }
                    break;

            }

            // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:38:38: ( limitClause )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==LIMIT) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:38:38: limitClause
                    {
                    pushFollow(FOLLOW_limitClause_in_selectStatement228);
                    limitClause9=limitClause();

                    state._fsp--;

                    stream_limitClause.add(limitClause9.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: selectClause, groupbyClause, fromClause, limitClause, whereClause, orderbyClause
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 38:53: -> ^( N_SELECT_STATEMENT fromClause selectClause ( whereClause )? ( groupbyClause )? ( orderbyClause )? ( limitClause )? )
            {
                // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:38:57: ^( N_SELECT_STATEMENT fromClause selectClause ( whereClause )? ( groupbyClause )? ( orderbyClause )? ( limitClause )? )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(N_SELECT_STATEMENT, "N_SELECT_STATEMENT"), root_1);

                adaptor.addChild(root_1, stream_fromClause.nextTree());
                adaptor.addChild(root_1, stream_selectClause.nextTree());
                // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:38:102: ( whereClause )?
                if ( stream_whereClause.hasNext() ) {
                    adaptor.addChild(root_1, stream_whereClause.nextTree());

                }
                stream_whereClause.reset();
                // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:38:115: ( groupbyClause )?
                if ( stream_groupbyClause.hasNext() ) {
                    adaptor.addChild(root_1, stream_groupbyClause.nextTree());

                }
                stream_groupbyClause.reset();
                // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:38:130: ( orderbyClause )?
                if ( stream_orderbyClause.hasNext() ) {
                    adaptor.addChild(root_1, stream_orderbyClause.nextTree());

                }
                stream_orderbyClause.reset();
                // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:38:145: ( limitClause )?
                if ( stream_limitClause.hasNext() ) {
                    adaptor.addChild(root_1, stream_limitClause.nextTree());

                }
                stream_limitClause.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "selectStatement"

    public static class selectClause_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "selectClause"
    // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:40:1: selectClause : SELECT columnExpr ( COMMA columnExpr )* -> ^( N_SELECT ( columnExpr )+ ) ;
    public final BqlParser.selectClause_return selectClause() throws RecognitionException {
        BqlParser.selectClause_return retval = new BqlParser.selectClause_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token SELECT10=null;
        Token COMMA12=null;
        BqlParser.columnExpr_return columnExpr11 = null;

        BqlParser.columnExpr_return columnExpr13 = null;


        CommonTree SELECT10_tree=null;
        CommonTree COMMA12_tree=null;
        RewriteRuleTokenStream stream_COMMA=new RewriteRuleTokenStream(adaptor,"token COMMA");
        RewriteRuleTokenStream stream_SELECT=new RewriteRuleTokenStream(adaptor,"token SELECT");
        RewriteRuleSubtreeStream stream_columnExpr=new RewriteRuleSubtreeStream(adaptor,"rule columnExpr");
        try {
            // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:40:19: ( SELECT columnExpr ( COMMA columnExpr )* -> ^( N_SELECT ( columnExpr )+ ) )
            // /home/nhsan/dremel/workspace/Metaxa/src/dremel/compiler/parser/impl/Bql.g:40:21: SELECT columnExpr ( COMMA columnExpr )*
            {
            SELECT10=(Token)match(input,SELECT,FOLLOW_SELECT_in_selectClause267);  
            stream_SELECT.add(SELECT10);

            pushFollow(FOLLOW_columnExpr_in_selectClause269);
            columnExpr11=columnExpr();

            state._fsp--;
